--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.3",
+    "gsap": "^3.12.7",
     "lucide-react": "^0.474.0",
     "next": "15.1.6",
     "react": "^19.0.0",
