--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   "dependencies": {
     "bootstrap": "^5.3.3",
     "gsap": "^3.12.7",
+    "i18next": "^24.2.2",
+    "i18next-resources-to-backend": "^1.2.1",
     "lucide-react": "^0.474.0",
     "next": "15.1.6",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
+    "react-i18next": "^15.4.0",
     "sass": "^1.84.0"
   },
   "devDependencies": {
